--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
-.App {
-  text-align: center;
+header {
+	align-items: center;
+	background: #fff;
+	display: flex;
+	height: 105px;
+	justify-content: center;
+	margin: 0 auto;
+	position: relative;
+	width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header .assessment-title {
+	color: #e74b16;
+	flex: 1 1 auto;
+	font-family: futura-pt, sans-serif;
+	font-size: 24px;
+	font-weight: 700;
+	text-align: center;
+	text-transform: uppercase;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+main .container {
+	border-radius: 10px;
+	margin: 80px auto 0;
+	max-width: 1110px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+main .assessment {
+	background: #fff;
+	margin-bottom: 50px;
+	min-height: 580px;
+	width: 95%;
 }
 
-.App-link {
-  color: #61dafb;
+main .assessment .steps {
+	margin: 0 auto 50px;
+	min-height: 480px;
+	width: 80%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main .assessment .steps .spacer {
+	height: 50px;
+}
+
+main .assessment .steps .progress-bar {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.bar-section {
+	width: 25%;
+}
+
+main .assessment .steps .progress-bar .MuiLinearProgress-root.custom-bar {
+	background-color: #e9e9e9;
+	border-radius: 3px;
+	height: 6px;
+}
+
+.css-7p5u54 {
+	position: relative;
+	overflow: hidden;
+	display: block;
+	height: 4px;
+	z-index: 0;
+	background-color: rgb(167, 202, 237);
+}
+
+main .assessment .steps .progress-bar .custom-bar .MuiLinearProgress-bar {
+	background: #20adb4;
+}
+
+.css-t752vm {
+	width: 100%;
+	position: absolute;
+	left: 0px;
+	bottom: 0px;
+	top: 0px;
+	transition: transform 0.4s linear 0s;
+	transform-origin: left center;
+	background-color: rgb(25, 118, 210);
+	/* isko responsive banana hai; */
+	/* transform: translateX(-80%); */
+}
+
+.p20 {
+	transform: translateX(-80%);
+}
+
+.p40 {
+	transform: translateX(-60%);
+}
+
+.p60 {
+	transform: translateX(-40%);
+}
+
+.section-title {
+	color: rgb(32, 173, 180);
+	font-weight: 600;
+}
+.section-title-disabled {
+	color: rgb(52, 51, 51);
+	font-weight: 400;
+	font-family: lato, sans-serif;
+	font-size: 21px;
+	text-align: center;
+	width: 100%;
+}
+main .assessment .steps .progress-bar .bar-section .bar {
+	height: 5px;
+	margin: 0 5px 10px;
+}
+
+main .assessment .steps .progress-bar .bar-section {
+	color: #20adb4;
+	font-family: lato, sans-serif;
+	font-size: 21px;
+	font-weight: 400;
+	text-align: center;
+	width: 100%;
+}
+
+.disabled {
+	color: rgb(52, 51, 51);
+	font-weight: 400;
+}
+
+main .assessment .steps .progress-indicator {
+	color: #e74b16;
+	font-family: lato, sans-serif;
+	font-size: 21px;
+	font-weight: 400;
+	margin: 70px auto 50px;
+	text-align: center;
+	width: 100%;
+}
+
+main .assessment .steps .question {
+	color: #343333;
+	font-family: lato, sans-serif;
+	font-size: 24px;
+	font-weight: 400;
+	min-height: 150px;
+	text-align: center;
+}
+
+main .assessment .steps .step-buttons {
+	display: flex;
+	justify-content: space-between;
+	margin: 90px auto 30px;
+}
+
+main .assessment .steps .step-buttons button {
+	color: #343333;
+	font-size: 14px;
+	font-weight: 600;
+}
+
+.css-1ujsas3 {
+	display: inline-flex;
+	-webkit-box-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	justify-content: center;
+	position: relative;
+	box-sizing: border-box;
+	-webkit-tap-highlight-color: transparent;
+	background-color: transparent;
+	outline: 0px;
+	border: 0px;
+	margin: 0px;
+	cursor: pointer;
+	user-select: none;
+	vertical-align: middle;
+	appearance: none;
+	text-decoration: none;
+	font-family: Roboto, Helvetica, Arial, sans-serif;
+	font-weight: 500;
+	font-size: 0.875rem;
+	line-height: 1.75;
+	letter-spacing: 0.02857em;
+	text-transform: uppercase;
+	min-width: 64px;
+	padding: 6px 8px;
+	border-radius: 4px;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+		box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+		border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+		color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+	color: rgb(25, 118, 210);
 }
